--- a/books/537de43829f3a0/config.yaml
+++ b/books/537de43829f3a0/config.yaml
@@ -1,5 +1,13 @@
 title: "BigQueryとdbt Cloudで始めるデータパイプライン入門"
-summary: ""
+summary: "事業会社においてBIやレポート用の分析を担当しているが以下のような状況に該当する人に向けたデータパイプライン構築の入門のための資料です
+
+🧑🏻‍🦱「BigQuery等のView機能を活用しているが、データの流れを追うのが困難な状態になってしまっている、クエリの実行に時間がかかりBIツールが使いづらい」
+👩🏻「専任のデータエンジニアがおらず、前処理をpython等で処理したりするのがリソース調整的に大変」
+👱🏻‍♂️「ロードされたデータに重複があったり、過不足があったりしてデータの品質が担保できていない」
+🧑🏻‍🦰「DigDagやluigiといったデータ変換ツールの独自の仕様を理解しきれておらず使いこなせていない」
+　
+※自分がBigQueryを中心に利用しているので記事自体はそれを前提に構成してあります、SnowflakeやAmazon Redshift等の様々な分析基盤でもdbtは対応可能です
+"
 topics: []
 published: false
 price: 0 # 有料の場合200〜5000
