タイトルの修正

--- a/books/537de43829f3a0/config.yaml
+++ b/books/537de43829f3a0/config.yaml
@@ -1,4 +1,4 @@
-title: "dbt Cloudで始めるデータパイプライン構築のdbt入門"
+title: "dbtで始めるデータパイプライン構築〜入門から実践〜"
 summary: "事業会社においてBIやレポート用の分析を担当しているが以下のような状況に該当する人に向けたデータパイプライン構築の入門のための資料です
 
 
